[cs-demo] Fix CSDPlayground bottom padding and alignment of sidebar button over CSDHeader

--- a/cs-ui-demo/src/sass/_csd-header.scss
+++ b/cs-ui-demo/src/sass/_csd-header.scss
@@ -19,6 +19,7 @@
 	@include sbg(--csd-app-body-bg);
 
 	.csd-header {
+		height: 3rem;
 		display: flex;
 		align-items: center;
 		border-radius: 0.5rem;
